--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -140,7 +140,6 @@ allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
@@ -321,6 +320,8 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2b88:2:48b::1;
+allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
@@ -348,7 +349,6 @@ allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
-allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
@@ -620,7 +620,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:df00:0:255::194;
