--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -669,8 +669,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.89;
+allow 195.47.238.90;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -921,19 +921,10 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
-allow 23.154.177.16;
-allow 23.154.177.17;
-allow 23.154.177.18;
-allow 23.154.177.19;
 allow 23.154.177.2;
-allow 23.154.177.20;
-allow 23.154.177.21;
-allow 23.154.177.22;
-allow 23.154.177.23;
 allow 23.154.177.24;
 allow 23.154.177.25;
 allow 23.154.177.26;
@@ -948,6 +939,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -974,6 +966,7 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
+allow 2600:6c67:4a7f:2ec7:10::8;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1230,7 +1223,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1274,6 +1266,7 @@ allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
+allow 2a0a:c801:1:5::57;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1656,6 +1649,7 @@ allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 5.181.156.44;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
@@ -1668,14 +1662,12 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.100.26;
-allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.118.183;
 allow 5.255.118.218;
 allow 5.255.118.244;
 allow 5.255.120.205;
@@ -1718,6 +1710,7 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
 allow 72.14.179.10;
+allow 72.175.68.97;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
