--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,6 +105,7 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
+allow 109.120.157.137;
 allow 109.169.33.163;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -154,7 +155,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
-allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -306,7 +306,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -672,7 +671,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -1275,6 +1274,7 @@ allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:c801:1:5::57;
+allow 2a0b:4140:6c6c::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1544,7 +1544,6 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::13;
-allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.13.195.22;
