--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -426,6 +426,7 @@ allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:c801:1:5::57;
+allow 2a0b:4140:6c6c::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -695,5 +696,4 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::13;
-allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
